tela das receitas e formulario

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,6 +55,7 @@
         <p>Explore nosso sistema e aproveite as funcionalidades disponíveis.</p>
         
         <a href="/user/login" class="btn btn-custom">Fazer Login</a>
+        <a href="/" class="btn btn-custom">Casdastrar</a>
     </div>
 
     <!-- Bootstrap JS -->
