nova tabela de config de usuario e cadastro de igrejas

--- a/views/revenues/index.ejs
+++ b/views/revenues/index.ejs
@@ -51,7 +51,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
                 </div>
                 <div class="modal-body">
-                    <form action="/revenues" method="POST">
+                    <form action="/revenues/add" method="POST">
                         <input type="hidden" name="churchId" value="<%= church.id %>">
                         
                         <div class="mb-3">
