--- a/views/churches/index.ejs
+++ b/views/churches/index.ejs
@@ -114,7 +114,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
                 </div>
                 <div class="modal-body">
-                    <form id="editChurchForm" method="POST">
+                    <form id="editChurchForm" action="/churches/update" method="POST">
                         <input type="hidden" id="editChurchId" name="id">
 
                         <div class="mb-3">
