--- a/views/login.ejs
+++ b/views/login.ejs
@@ -68,5 +68,11 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <% if (alertMessage) { %>
+        <script>
+            alert("<%= alertMessage %>");
+        </script>
+        <% alertMessage = null; %> <!-- Limpa a mensagem da sessão -->
+    <% } %>    
 </body>
 </html>
