--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -7,12 +7,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
-    
+    <%- include('../partials/sidebar') %>
+
     <div class="container mt-5" style="margin-left: 260px;">
-        <h2 class="text-primary"><%= title %></h2>
-        <button class="btn btn-success mb-3" data-bs-toggle="modal" data-bs-target="#addUserModal">Adicionar Usuário</button>
-        
-        <table class="table table-striped">
+
+        <div class="d-flex justify-content-between align-items-center">
+            <h2 class="text-primary"><%= title %></h2>
+            <button class="btn btn-success mb-3" data-bs-toggle="modal" data-bs-target="#addUserModal">Adicionar Usuário</button>
+        </div>
+
+        <table class="table table-striped table-hover mt-4">
             <thead class="table-dark">
                 <tr>
                     <th>ID</th>
@@ -72,6 +76,7 @@
                             <select class="form-control" id="role" name="role" required>
                                 <option value="ADMINISTRADOR">ADMINISTRADOR</option>
                                 <option value="DIRIGENTE_IGREJA">DIRIGENTE IGREJA</option>
+                                <option value="DIRIGENTE_IGREJA">DESABILITADO</option>
                             </select>
                         </div>
                         <div class="modal-footer">
@@ -108,6 +113,7 @@
                             <select class="form-control" id="editRole" name="role" required>
                                 <option value="ADMINISTRADOR">ADMINISTRADOR</option>
                                 <option value="DIRIGENTE_IGREJA">DIRIGENTE IGREJA</option>
+                                <option value="DIRIGENTE_IGREJA">DESABILITADO</option>
                             </select>
                         </div>
                         <div class="modal-footer">
