--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -22,8 +22,8 @@
                     <th>ID</th>
                     <th>Nome</th>
                     <th>Email</th>
-                    <th>Role</th>
-                    <th>Ações</th>
+                    <th>Perfil</th>
+                    <th>Info</th>
                 </tr>
             </thead>
             <tbody>
@@ -34,14 +34,14 @@
                         <td><%= user.email %></td>
                         <td><%= user.UserConfig ? user.UserConfig.role : 'Não definido' %></td>
                         <td>
-                            <button class="btn btn-warning btn-sm" data-bs-toggle="modal" 
+                            <button class="btn btn-info btn-sm" data-bs-toggle="modal" 
                                     data-bs-target="#editUserModal"
                                     onclick="loadUserData(<%= user.id %>, '<%= user.name %>', '<%= user.email %>', '<%= user.UserConfig ? user.UserConfig.role : '' %>')">
-                                Editar
+                                Info
                             </button>
-                            <form action="/users/delete/<%= user.id %>" method="POST" class="d-inline">
+                            <!-- <form action="javascript:alert('Função ainda não disponível');" method="POST" class="d-inline">
                                 <button type="submit" class="btn btn-danger btn-sm">Deletar</button>
-                            </form>
+                            </form> -->
                         </td>
                     </tr>
                 <% }) %>
