--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -36,7 +36,7 @@
                         <td>
                             <button class="btn btn-info btn-sm" data-bs-toggle="modal" 
                                     data-bs-target="#editUserModal"
-                                    onclick="loadUserData(<%= user.id %>, '<%= user.name %>', '<%= user.email %>', '<%= user.UserConfig ? user.UserConfig.role : '' %>')">
+                                    onclick="loadUserData(<%= user.id %>, '<%= user.name %>', '<%= user.email %>', '<%= user.UserConfig ? user.UserConfig.role : '' %>',  '<%= user.UserConfig ? user.UserConfig.churchsId : '' %>')">
                                 Info
                             </button>
                             <!-- <form action="javascript:alert('Função ainda não disponível');" method="POST" class="d-inline">
@@ -76,9 +76,17 @@
                             <select class="form-control" id="role" name="role" required>
                                 <option value="ADMINISTRADOR">ADMINISTRADOR</option>
                                 <option value="DIRIGENTE_IGREJA">DIRIGENTE IGREJA</option>
-                                <option value="DIRIGENTE_IGREJA">DESABILITADO</option>
+                                <option value="DESABILITADO">DESABILITADO</option>
                             </select>
                         </div>
+                        <div class="mb-3">
+                            <label for="churchsId" class="form-label">Ids das Igrejas</label>
+                            <select class="form-control" id="churchsId" name="churchsId[]" multiple>
+                                <% churches.forEach(church => { %>
+                                    <option value="<%= church.id %>"><%= church.name %></option>
+                                <% }) %>
+                            </select>
+                        </div>                                             
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                             <button type="submit" class="btn btn-primary">Salvar</button>
@@ -113,9 +121,17 @@
                             <select class="form-control" id="editRole" name="role" required>
                                 <option value="ADMINISTRADOR">ADMINISTRADOR</option>
                                 <option value="DIRIGENTE_IGREJA">DIRIGENTE IGREJA</option>
-                                <option value="DIRIGENTE_IGREJA">DESABILITADO</option>
+                                <option value="DESABILITADO">DESABILITADO</option>
                             </select>
                         </div>
+                        <div class="mb-3">
+                            <label for="churchsId" class="form-label">Ids das Igrejas</label>
+                            <select class="form-control" id="editChurchsId" name="editChurchsId[]" multiple>
+                                <% churches.forEach(church => { %>
+                                    <option value="<%= church.id %>"><%= church.name %></option>
+                                <% }) %>
+                            </select>
+                        </div>                        
                         <div class="modal-footer">
                             <a id="actionResetPass" href="/users/reset-auth?email=" class="btn btn-secondary">Resetar senha</a>
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
@@ -128,14 +144,29 @@
     </div>
 
     <script>
-        function loadUserData(id, name, email, role) {
+        function loadUserData(id, name, email, role, churchsIds) {
             document.getElementById('editUserId').value = id;
             document.getElementById('editName').value = name;
             document.getElementById('editEmail').value = email;
             document.getElementById('editRole').value = role;
             document.getElementById('editUserForm').action = `/users/update/${id}`;
             document.getElementById('actionResetPass').href = `/users/reset-auth?email=${email}`;
+
+            // IDs das igrejas que devem estar selecionadas
+            const selectedChurchs = churchsIds.split(",");
+            console.log(selectedChurchs);
+
+            // Obtém o elemento select
+            const select = document.getElementById('editChurchsId');
+
+            // Percorre as opções do select
+            for (let option of select.options) {
+                if (selectedChurchs.includes(option.value)) {
+                    option.selected = true; // Marca como selecionado
+                }
+            }
         }
+
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
