--- a/views/revenues/index.ejs
+++ b/views/revenues/index.ejs
@@ -72,6 +72,19 @@
                             <input type="number" class="form-control" id="amount" name="amount" step="0.01" required>
                         </div>
 
+                        <div class="mb-3">
+                            <label for="role" class="form-label">Perfil</label>
+                            <select class="form-control" id="editType" name="type" required>
+                                <option value="INCOME">Receita</option>
+                                <option value="EXPENSE">Despesa</option>
+                            </select>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="editName" class="form-label">Descrição</label>
+                            <input type="text" class="form-control" id="editDescription" name="description" required>
+                        </div>
+
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                             <button type="submit" class="btn btn-primary">Salvar</button>
