--- a/views/revenues/index.ejs
+++ b/views/revenues/index.ejs
@@ -16,6 +16,13 @@
             <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addRevenueModal">Nova Receita</button>
         </div>
         
+        <!-- Botões de navegação de mês -->
+        <div class="d-flex justify-content-between align-items-center mt-3">
+            <a href="/revenues/<%= church.id %>?month=<%= currentMonth - 1 %>&year=<%= currentYear %>" class="btn btn-primary">Mês Anterior</a>
+            <span class="h4"><%= new Date(currentYear, currentMonth - 1).toLocaleString('default', { month: 'long' }) %> <%= currentYear %></span>
+            <a href="/revenues/<%= church.id %>?month=<%= currentMonth + 1 %>&year=<%= currentYear %>" class="btn btn-primary">Próximo Mês</a>
+        </div>
+        
         <table class="table table-striped table-hover mt-4">
             <thead class="table-dark">
                 <tr>
@@ -43,9 +50,7 @@
                 <% }) %>
             </tbody>
         </table>
-
         <a href="/churches" class="btn btn-secondary mt-3">Voltar</a>
-    </div>
 
     <!-- Modal de Cadastro de Receita -->
     <div class="modal fade" id="addRevenueModal" tabindex="-1" aria-labelledby="addRevenueModalLabel" aria-hidden="true">
