--- a/src/modules/church/views/index.ejs
+++ b/src/modules/church/views/index.ejs
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
-    <%- include('../partials/sidebar') %>
+    <%- include('../../common/views/sidebar.ejs') %>
     <div class="container mt-5" style="margin-left: 260px;">
         <div class="d-flex justify-content-between align-items-center">
             <h2 class="text-primary"><%= title %></h2>
